--- a/LLM.Guard/LLM.Guard.csproj
+++ b/LLM.Guard/LLM.Guard.csproj
@@ -6,6 +6,20 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Authors>Curiosity GmbH</Authors>
+    <Copyright>(c) Copyright 2024 Curiosity GmbH - all right reserved</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>www.curiosity.ai</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/curiosity-ai/llm-guard</RepositoryUrl>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageId>LLM.Guard</PackageId>
+    <Description>Easily implement guardrails around LLM prompts.</Description>
+    <PackageTags>Guardrails, LLMs, Prompt Engineering, Jailbreak, English, Natural Language Processing, NLP, Machine Learning, ML, Embeddings, Sentence Embeddings, Sentence Transformers, Data Science, Big Data, Artificial Intelligence, AI, NLP Library, Neural Networks, Deep Learning</PackageTags>
+  </PropertyGroup>
+
+
   <ItemGroup>
     <EmbeddedResource Include="Resources\*.*" Visible="true" />
   </ItemGroup>
