implement unicode homoglyphs filtering, add variations to prompts

--- a/LLM.Guard.Prepare/LLM.Guard.Prepare.csproj
+++ b/LLM.Guard.Prepare/LLM.Guard.Prepare.csproj
@@ -19,10 +19,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="data\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Update="data\jailbreak_llms\data\forbidden_question\forbidden_question_set.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -36,6 +32,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="data\jailbreak_llms\data\prompts\regular_prompts_2023_12_25.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="data\simple\jailbreak-variations.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
